[dependencies]
clap = '4.5.4'
ndarray = '0.15.6'
num = '0.4.1'
serde_yaml = '0.9.34+deprecated'

[dependencies.hdf5]
version = '0.8.1'

[dependencies.hdf5-sys]
features = ['static']
version = '0.8.1'

[dependencies.lds]
path = '../lds'

[dependencies.serde]
features = ['derive']
version = '1.0.197'

[package]
edition = '2021'
name = 'oskar_gain'
version = '0.1.0'
